# iso20022-mcp

./: README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  mcp-inspect.yml  publish-mcp.yml  release.yml
examples/: mcp_tools.py
iso20022_mcp/: __init__.py  registry.py  server.py
tests/: conftest.py  test_registry.py  test_server.py
